src/test/ui/type-alias-enum-variants-priority-2.stderr
error[E0061]: this function takes 1 parameter but 0 parameters were supplied
  --> $DIR/type-alias-enum-variants-priority-2.rs:12:5
   |
LL |     V(u8)
   |     ----- defined here
...
LL |     <E>::V();
   |     ^^^^^^^^ expected 1 parameter

error: aborting due to previous error

For more information about this error, try `rustc --explain E0061`.
